--- a/index.html
+++ b/index.html
@@ -466,153 +466,145 @@
 
   <div class="sep"></div>
 
+  <!-- FAQ -->
   <section class="section" id="faq">
+    <h2>Preguntas frecuentes</h2>
 
-    <!-- FAQ -->
-    <section class="section" id="faq">
-      <h2>Preguntas frecuentes</h2>
+    <div class="faq">
+      <details class="faq-item" open>
+        <summary>¿En cuánto tiempo se ven resultados?</summary>
+        <p>Normalmente 14–30 días dependiendo del ticket, creatividades y respuesta del equipo a las citas.</p>
+      </details>
+      <details class="faq-item">
+        <summary>¿Necesito grabar vídeos con mi cara?</summary>
+        <p>No. Podemos usar voz en off, b-roll premium y creatividad editorial sin mostrar identidad.</p>
+      </details>
+      <details class="faq-item">
+        <summary>¿Qué pasa si no tengo testimonios?</summary>
+        <p>Se puede empezar con autoridad (marca, historia, proceso) y generar prueba progresiva en las primeras
+          semanas.</p>
+      </details>
+      <details class="faq-item">
+        <summary>¿Esto se puede conectar con Make?</summary>
+        <p>Sí. El formulario puede enviar los datos a un Webhook de Make para CRM, emails, WhatsApp, etc.</p>
+      </details>
+    </div>
+  </section>
 
-      <div class="faq">
-        <details class="faq-item" open>
-          <summary>¿En cuánto tiempo se ven resultados?</summary>
-          <p>Normalmente 14–30 días dependiendo del ticket, creatividades y respuesta del equipo a las citas.</p>
-        </details>
-        <details class="faq-item">
-          <summary>¿Necesito grabar vídeos con mi cara?</summary>
-          <p>No. Podemos usar voz en off, b-roll premium y creatividad editorial sin mostrar identidad.</p>
-        </details>
-        <details class="faq-item">
-          <summary>¿Qué pasa si no tengo testimonios?</summary>
-          <p>Se puede empezar con autoridad (marca, historia, proceso) y generar prueba progresiva en las primeras
-            semanas.</p>
-        </details>
-        <details class="faq-item">
-          <summary>¿Esto se puede conectar con Make?</summary>
-          <p>Sí. El formulario puede enviar los datos a un Webhook de Make para CRM, emails, WhatsApp, etc.</p>
-        </details>
+  <!-- Lead form -->
+  <section class="section dark" id="agenda">
+    <h2>Solicita tu sesión privada</h2>
+    <p>Rellena el formulario y te contactamos para confirmar la agenda.</p>
+
+    <form id="leadForm" data-track="form_submit">
+      <input name="name" placeholder="Nombre" required>
+      <input name="email" type="email" placeholder="Email" required>
+      <input name="phone" placeholder="Teléfono / WhatsApp" required>
+      <input name="city" placeholder="Ciudad" required>
+
+      <select name="ticket" required>
+        <option value="">Ticket medio</option>
+        <option>1.000€ – 3.000€</option>
+        <option>3.000€ – 10.000€</option>
+        <option>10.000€+</option>
+      </select>
+
+      <select name="ads" required>
+        <option value="">¿Hacéis anuncios ahora?</option>
+        <option>Sí</option>
+        <option>No</option>
+        <option>Lo intentamos pero no funciona</option>
+      </select>
+
+      <input class="hp" type="text" name="company_website" tabindex="-1" autocomplete="off" aria-hidden="true">
+
+      <button type="submit" class="btn primary full">Solicitar sesión</button>
+      <p class="form-status" id="formStatus" aria-live="polite"></p>
+
+      <div class="form-note">
+        Al enviar, aceptas que te contactemos para coordinar la sesión. Sin spam.
       </div>
-    </section>
+    </form>
+  </section>
+  <!-- Sticky CTA -->
+  <a href="agenda.html" class="sticky-cta" data-track="cta_agenda">Agenda sesión</a>
 
-    <!-- Lead form -->
-    <section class="section dark" id="agenda">
-      <h2>Solicita tu sesión privada</h2>
-      <p>Rellena el formulario y te contactamos para confirmar la agenda.</p>
+  <div class="vsl-modal" data-vsl-modal aria-hidden="true">
+    <div class="vsl-modal__backdrop" data-vsl-close></div>
 
-      <form id="leadForm" data-track="form_submit">
-        <input name="name" placeholder="Nombre" required>
-        <input name="email" type="email" placeholder="Email" required>
-        <input name="phone" placeholder="Teléfono / WhatsApp" required>
-        <input name="city" placeholder="Ciudad" required>
+    <div class="vsl-modal__panel" role="dialog" aria-modal="true" aria-label="Video">
+      <button class="vsl-modal__close" type="button" data-vsl-close aria-label="Cerrar">✕</button>
 
-        <select name="ticket" required>
-          <option value="">Ticket medio</option>
-          <option>1.000€ – 3.000€</option>
-          <option>3.000€ – 10.000€</option>
-          <option>10.000€+</option>
-        </select>
-
-        <select name="ads" required>
-          <option value="">¿Hacéis anuncios ahora?</option>
-          <option>Sí</option>
-          <option>No</option>
-          <option>Lo intentamos pero no funciona</option>
-        </select>
-
-        <button type="submit" class="btn primary full">Solicitar sesión</button>
-        <p class="form-status" id="formStatus" aria-live="polite"></p>
-
-        <div class="form-note">
-          Al enviar, aceptas que te contactemos para coordinar la sesión. Sin spam.
-        </div>
-      </form>
-    </section>
-
-    <footer class="footer">
-      <p>© Aurum Studio</p>
-    </footer>
-
-    <!-- Sticky CTA -->
-    <a href="agenda.html" class="btn primary" data-track="cta_agenda">Agenda sesión</a>
-
-    <script src="app.js"></script>
-    <div class="vsl-modal" data-vsl-modal aria-hidden="true">
-      <div class="vsl-modal__backdrop" data-vsl-close></div>
-
-      <div class="vsl-modal__panel" role="dialog" aria-modal="true" aria-label="Video">
-        <button class="vsl-modal__close" type="button" data-vsl-close aria-label="Cerrar">✕</button>
-
-        <div class="vsl-embed">
-          <!-- CAMBIA ESTE LINK cuando tengas el vídeo -->
-          <!-- YouTube ejemplo: https://www.youtube.com/embed/XXXXXXXXXXX -->
-          <!-- Vimeo ejemplo:   https://player.vimeo.com/video/XXXXXXXXX -->
-          <iframe data-vsl-iframe src="https://www.youtube.com/embed/XXXXXXXXXXX" title="VSL Aurum Studio"
-            frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-        </div>
+      <div class="vsl-embed">
+        <!-- CAMBIA ESTE LINK cuando tengas el vídeo -->
+        <!-- YouTube ejemplo: https://www.youtube.com/embed/XXXXXXXXXXX -->
+        <!-- Vimeo ejemplo:   https://player.vimeo.com/video/XXXXXXXXX -->
+        <iframe data-vsl-iframe src="https://www.youtube.com/embed/XXXXXXXXXXX" title="VSL Aurum Studio" frameborder="0"
+          allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-    <footer class="site-footer" id="footer">
-      <div class="site-footer__inner">
-        <div class="site-footer__brand">© Aurum Studio</div>
+  </div>
+  <footer class="site-footer" id="footer">
+    <div class="site-footer__inner">
+      <div class="site-footer__brand">© Aurum Studio</div>
 
-        <div class="social social--bottom">
-          <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
-            aria-label="Instagram Aurum Studio">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path
-                d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
-            </svg>
-          </a>
+      <div class="social social--bottom">
+        <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
+          aria-label="Instagram Aurum Studio">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path
+              d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
+          </svg>
+        </a>
 
-          <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
-            aria-label="Facebook Aurum Studio">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path
-                d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.2-1.5 1.6-1.5h1.6V5c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3H10v8h3.5Z" />
-            </svg>
-          </a>
-        </div>
+        <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
+          aria-label="Facebook Aurum Studio">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path
+              d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.2-1.5 1.6-1.5h1.6V5c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3H10v8h3.5Z" />
+          </svg>
+        </a>
       </div>
-    </footer>
-    <script src="app.js"></script>
-    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-    <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <script>
-      (function () {
-        const send = (event, payload = {}) => {
-          // Consola (para probar)
-          console.log("[TRACK]", event, payload);
+    </div>
+  </footer>
+  <script src="app.js"></script>
+  <script>
+    (function () {
+      const send = (event, payload = {}) => {
+        // Consola (para probar)
+        console.log("[TRACK]", event, payload);
 
-          // GA4 (si lo instalas)
-          if (window.gtag) {
-            window.gtag("event", event, payload);
-          }
+        // GA4 (si lo instalas)
+        if (window.gtag) {
+          window.gtag("event", event, payload);
+        }
 
-          // Meta Pixel (si lo instalas)
-          if (window.fbq) {
-            window.fbq("trackCustom", event, payload);
-          }
-        };
+        // Meta Pixel (si lo instalas)
+        if (window.fbq) {
+          window.fbq("trackCustom", event, payload);
+        }
+      };
 
-        // Clicks en CTA / VSL / etc.
-        document.addEventListener("click", (e) => {
-          const el = e.target.closest("[data-track]");
-          if (!el) return;
+      // Clicks en CTA / VSL / etc.
+      document.addEventListener("click", (e) => {
+        const el = e.target.closest("[data-track]");
+        if (!el) return;
 
-          const event = el.getAttribute("data-track");
-          const text = (el.textContent || "").trim().slice(0, 80);
-          const href = el.getAttribute("href") || "";
-          send(event, { text, href, page: location.pathname });
-        });
+        const event = el.getAttribute("data-track");
+        const text = (el.textContent || "").trim().slice(0, 80);
+        const href = el.getAttribute("href") || "";
+        send(event, { text, href, page: location.pathname });
+      });
 
-        // Submit de formulario (si existe)
-        document.addEventListener("submit", (e) => {
-          const form = e.target.closest("form[data-track='form_submit']");
-          if (!form) return;
+      // Submit de formulario (si existe)
+      document.addEventListener("submit", (e) => {
+        const form = e.target.closest("form[data-track='form_submit']");
+        if (!form) return;
 
-          send("form_submit", { page: location.pathname });
-        });
-      })();
-    </script>
+        send("form_submit", { page: location.pathname });
+      });
+    })();
+  </script>
 
 </body>
 
