fix form + sticky cta + instagram icon

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
       aria-label="Instagram Aurum Studio">
       <!-- Instagram SVG -->
       <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path
+        <path fill-rule="evenodd" clip-rule="evenodd"
           d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
+
       </svg>
     </a>
 
@@ -516,7 +517,8 @@
         <option>Lo intentamos pero no funciona</option>
       </select>
 
-      <input class="hp" type="text" name="company_website" tabindex="-1" autocomplete="off" aria-hidden="true">
+      <input type="text" name="company_website" tabindex="-1" autocomplete="off" aria-hidden="true"
+        style="position:absolute;left:-9999px;top:-9999px;width:0;height:0;opacity:0;pointer-events:none;">
 
       <button type="submit" class="btn primary full">Solicitar sesión</button>
       <p class="form-status" id="formStatus" aria-live="polite"></p>
