remove sticky cta + fix instagram icon

--- a/index.html
+++ b/index.html
@@ -41,15 +41,12 @@
 <body>
   <!-- Social TOP (esquina) -->
   <div class="social social--top">
-    <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
-      aria-label="Instagram Aurum Studio">
-      <!-- Instagram SVG -->
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-          d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+    </svg>
 
-      </svg>
-    </a>
 
     <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
       aria-label="Facebook Aurum Studio">
@@ -529,7 +526,7 @@
     </form>
   </section>
   <!-- Sticky CTA -->
-  <a href="agenda.html" class="sticky-cta" data-track="cta_agenda">Agenda sesión</a>
+
 
   <div class="vsl-modal" data-vsl-modal aria-hidden="true">
     <div class="vsl-modal__backdrop" data-vsl-close></div>
