--- a/index.html
+++ b/index.html
@@ -48,14 +48,34 @@
     </svg>
 
 
-    <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
-      aria-label="Facebook Aurum Studio">
-      <!-- Facebook SVG -->
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path
-          d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.2-1.5 1.6-1.5h1.6V5c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3H10v8h3.5Z" />
+    <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
+      aria-label="Instagram Aurum Studio">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+        <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
       </svg>
     </a>
+
+    <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
+      aria-label="Facebook Aurum Studio">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
+        <path d="M11 9v13"></path>
+        <path d="M9 13h4"></path>
+      </svg>
+    </a>
+
+
+    <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
+      aria-label="Facebook Aurum Studio">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
+        <path d="M11 9v13"></path>
+        <path d="M9 13h4"></path>
+      </svg>
+    </a>
+
   </div>
 
 
@@ -550,19 +570,41 @@
       <div class="social social--bottom">
         <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
           aria-label="Instagram Aurum Studio">
-          <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path
-              d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+            <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
           </svg>
         </a>
 
         <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
           aria-label="Facebook Aurum Studio">
-          <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path
-              d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.2-1.5 1.6-1.5h1.6V5c-.3 0-1.3-.1-2.5-.1-2.5 0-4.2 1.5-4.2 4.3V11H7.5v3H10v8h3.5Z" />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
+            <path d="M11 9v13"></path>
+            <path d="M9 13h4"></path>
           </svg>
         </a>
+
+
+        <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank" rel="noopener"
+          aria-label="Instagram Aurum Studio">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+            <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+          </svg>
+        </a>
+
+        <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
+          aria-label="Facebook Aurum Studio">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
+            <path d="M11 9v13"></path>
+            <path d="M9 13h4"></path>
+          </svg>
+        </a>
+
       </div>
     </div>
   </footer>
