fix social spacing + facebook icon

--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
 
     <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
       aria-label="Facebook Aurum Studio">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
-        <path d="M11 9v13"></path>
-        <path d="M9 13h4"></path>
+      <svg class="icon-fill" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
       </svg>
     </a>
+
 
   </div>
 
@@ -570,12 +569,11 @@
 
       <a class="social__link" href="https://www.facebook.com/TU_PAGINA" target="_blank" rel="noopener"
         aria-label="Facebook Aurum Studio">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M14 9h-3V7c0-1 1-2 2-2h1"></path>
-          <path d="M11 9v13"></path>
-          <path d="M9 13h4"></path>
+        <svg class="icon-fill" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
         </svg>
       </a>
+
 
     </div>
     </div>
