add legal links in footer

--- a/agenda.html
+++ b/agenda.html
@@ -125,6 +125,15 @@
             });
         })();
     </script>
+<footer class="site-footer" id="footer">
+  <div class="site-footer__inner">
+    <div class="site-footer__brand">© Aurum Studio</div>
+    <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
+      <a href="aviso-legal.html">Aviso legal</a>
+      <a href="politica-privacidad.html">Privacidad</a>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
