add legal links and remove duplicate footer

--- a/index.html
+++ b/index.html
@@ -553,6 +553,10 @@
     </div>
   </div>
   <footer class="site-footer" id="footer">
+    <div class="subtle legal-links">
+      <a href="aviso-legal.html">Aviso legal</a>
+      <a href="politica-privacidad.html">Privacidad</a>
+    </div>
   </footer>
   <script src="app.js"></script>
   <script>
