update legal notice

--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -26,16 +26,16 @@
 
   <section class="section" style="padding-top: 40px;">
     <h1>Aviso legal y condiciones de uso</h1>
-    <p class="subtle">Última actualización: [DD/MM/AAAA]</p>
+    <p class="subtle">Última actualización: [10/07/2025]</p>
 
     <h2>1. Identificación del titular</h2>
     <p>En cumplimiento del deber de información establecido en la normativa aplicable, se informa que este sitio web es titularidad de:</p>
     <ul>
-      <li><strong>Titular / Razón social:</strong> [AURUM STUDIO / RAZÓN SOCIAL COMPLETA]</li>
+      <li><strong>Titular / Razón social:</strong> [AURUM STUDIO / AURUM STUDIO, SL]</li>
       <li><strong>NIF/CIF:</strong> [NIF/CIF]</li>
-      <li><strong>Domicilio:</strong> [DIRECCIÓN COMPLETA, CIUDAD, CP, PROVINCIA, PAÍS]</li>
-      <li><strong>Email de contacto:</strong> <a href="mailto:[EMAIL]">[EMAIL]</a></li>
-      <li><strong>Teléfono:</strong> [TELÉFONO] (opcional)</li>
+      <li><strong>Domicilio:</strong> [Calle Palancia 37, Sagunto, 46520, Valencia]</li>
+      <li><strong>Email de contacto:</strong> <a href="mailto:[EMAIL]">[enrique@aurumstudio.es]</a></li>
+      <li><strong>Teléfono:</strong> [694234990]</li>
       <li><strong>Datos registrales:</strong> [REGISTRO MERCANTIL/REGISTRO, TOMO, FOLIO, HOJA] (si aplica)</li>
       <li><strong>Nombre de dominio:</strong> aurumstudio.es</li>
     </ul>
