--- a/agenda.html
+++ b/agenda.html
@@ -113,12 +113,14 @@
     <footer class="site-footer" id="footer">
         <div class="site-footer__inner">
             <div class="site-footer__brand">© Aurum Studio</div>
-            <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
+
+            <div class="subtle legal-links">
                 <a href="aviso-legal.html">Aviso legal</a>
                 <a href="politica-privacidad.html">Privacidad</a>
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
