--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aviso legal | Aurum Studio</title>
   <meta name="robots" content="index,follow" />
   <meta name="description" content="Aviso legal y condiciones de uso del sitio web de Aurum Studio." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -29,7 +35,8 @@
     <p class="subtle">Última actualización: [10/07/2025]</p>
 
     <h2>1. Identificación del titular</h2>
-    <p>En cumplimiento del deber de información establecido en la normativa aplicable, se informa que este sitio web es titularidad de:</p>
+    <p>En cumplimiento del deber de información establecido en la normativa aplicable, se informa que este sitio web es
+      titularidad de:</p>
     <ul>
       <li><strong>Titular / Razón social:</strong> [AURUM STUDIO / AURUM STUDIO, SL]</li>
       <li><strong>NIF/CIF:</strong> [NIF/CIF]</li>
@@ -41,42 +48,56 @@
     </ul>
 
     <h2>2. Objeto</h2>
-    <p>El presente Aviso Legal regula el acceso, navegación y uso del sitio web, así como las responsabilidades derivadas de la utilización de sus contenidos.</p>
+    <p>El presente Aviso Legal regula el acceso, navegación y uso del sitio web, así como las responsabilidades
+      derivadas de la utilización de sus contenidos.</p>
 
     <h2>3. Condiciones de uso</h2>
     <ul>
       <li>El usuario se compromete a realizar un uso lícito y diligente del sitio web.</li>
-      <li>Queda prohibido el uso del sitio con fines ilícitos, lesivos o que puedan dañar, inutilizar o sobrecargar la web.</li>
-      <li>El titular se reserva el derecho a modificar, suspender o retirar contenidos y servicios sin previo aviso.</li>
+      <li>Queda prohibido el uso del sitio con fines ilícitos, lesivos o que puedan dañar, inutilizar o sobrecargar la
+        web.</li>
+      <li>El titular se reserva el derecho a modificar, suspender o retirar contenidos y servicios sin previo aviso.
+      </li>
     </ul>
 
     <h2>4. Propiedad intelectual e industrial</h2>
-    <p>Todos los contenidos del sitio web están protegidos por derechos de propiedad intelectual e industrial y pertenecen al titular o a terceros licenciantes. Queda prohibida su reproducción, distribución, comunicación pública o transformación sin autorización expresa, salvo en los casos legalmente permitidos.</p>
+    <p>Todos los contenidos del sitio web están protegidos por derechos de propiedad intelectual e industrial y
+      pertenecen al titular o a terceros licenciantes. Queda prohibida su reproducción, distribución, comunicación
+      pública o transformación sin autorización expresa, salvo en los casos legalmente permitidos.</p>
 
     <h2>5. Enlaces</h2>
-    <p>Este sitio puede incluir enlaces a páginas de terceros. El titular no asume responsabilidad por el contenido, políticas o prácticas de dichos sitios externos.</p>
+    <p>Este sitio puede incluir enlaces a páginas de terceros. El titular no asume responsabilidad por el contenido,
+      políticas o prácticas de dichos sitios externos.</p>
 
     <h2>6. Responsabilidad</h2>
-    <p>El titular no garantiza la inexistencia de interrupciones o errores en el acceso al sitio, ni que su contenido esté actualizado en todo momento. No será responsable de los daños derivados de interferencias, virus, desconexiones o cualquier circunstancia ajena a su control.</p>
+    <p>El titular no garantiza la inexistencia de interrupciones o errores en el acceso al sitio, ni que su contenido
+      esté actualizado en todo momento. No será responsable de los daños derivados de interferencias, virus,
+      desconexiones o cualquier circunstancia ajena a su control.</p>
 
     <h2>7. Comunicaciones comerciales</h2>
-    <p>En caso de envío de comunicaciones comerciales por vía electrónica, se realizarán conforme a la normativa aplicable y ofreciendo siempre un medio sencillo y gratuito para darse de baja.</p>
+    <p>En caso de envío de comunicaciones comerciales por vía electrónica, se realizarán conforme a la normativa
+      aplicable y ofreciendo siempre un medio sencillo y gratuito para darse de baja.</p>
 
     <h2>8. Protección de datos</h2>
-    <p>El tratamiento de datos personales se rige por lo dispuesto en la <a href="politica-privacidad.html">Política de Privacidad</a>.</p>
+    <p>El tratamiento de datos personales se rige por lo dispuesto en la <a href="politica-privacidad.html">Política de
+        Privacidad</a>.</p>
 
     <h2>9. Legislación aplicable y jurisdicción</h2>
-    <p>Este Aviso Legal se rige por la legislación española. Para cualquier controversia, las partes se someten a los Juzgados y Tribunales de [CIUDAD/PROVINCIA], salvo que la normativa de consumidores y usuarios disponga otro fuero.</p>
+    <p>Este Aviso Legal se rige por la legislación española. Para cualquier controversia, las partes se someten a los
+      Juzgados y Tribunales de [CIUDAD/PROVINCIA], salvo que la normativa de consumidores y usuarios disponga otro
+      fuero.</p>
   </section>
 
   <footer class="site-footer" id="footer">
     <div class="site-footer__inner">
       <div class="site-footer__brand">© Aurum Studio</div>
       <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
+        <div class="subtle legal-links"></div>
         <a href="aviso-legal.html">Aviso legal</a>
         <a href="politica-privacidad.html">Privacidad</a>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
