--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Política de privacidad | Aurum Studio</title>
   <meta name="robots" content="index,follow" />
   <meta name="description" content="Política de privacidad del sitio web de Aurum Studio." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -39,8 +45,10 @@
     <h2>2. Datos personales que tratamos</h2>
     <ul>
       <li><strong>Datos identificativos y de contacto:</strong> nombre, email, teléfono/WhatsApp, ciudad.</li>
-      <li><strong>Datos profesionales/comerciales:</strong> información que aportes sobre tu negocio (p. ej. ticket medio, si haces anuncios).</li>
-      <li><strong>Datos técnicos:</strong> IP, dispositivo/navegador y datos de navegación (solo si implementas analítica/cookies).</li>
+      <li><strong>Datos profesionales/comerciales:</strong> información que aportes sobre tu negocio (p. ej. ticket
+        medio, si haces anuncios).</li>
+      <li><strong>Datos técnicos:</strong> IP, dispositivo/navegador y datos de navegación (solo si implementas
+        analítica/cookies).</li>
     </ul>
 
     <h2>3. Finalidades del tratamiento</h2>
@@ -48,18 +56,23 @@
       <li><strong>Gestionar solicitudes de contacto</strong> enviadas mediante formularios o email.</li>
       <li><strong>Gestionar la reserva de reuniones</strong> y comunicaciones necesarias para coordinar la sesión.</li>
       <li><strong>Mejorar el sitio y la seguridad</strong> (prevención de spam y abuso).</li>
-      <li><strong>En su caso, enviar información comercial</strong> sobre servicios, solo si lo autorizas o si existe base legal aplicable.</li>
+      <li><strong>En su caso, enviar información comercial</strong> sobre servicios, solo si lo autorizas o si existe
+        base legal aplicable.</li>
     </ul>
 
     <h2>4. Base jurídica (legitimación)</h2>
     <ul>
-      <li><strong>Consentimiento</strong> del interesado (por ejemplo, al enviar un formulario solicitando contacto).</li>
-      <li><strong>Interés legítimo</strong> para prevenir fraude/spam y mantener la seguridad del sitio (cuando sea necesario y proporcional).</li>
-      <li><strong>Medidas precontractuales</strong> si solicitas una sesión/diagnóstico para evaluar una posible relación profesional.</li>
+      <li><strong>Consentimiento</strong> del interesado (por ejemplo, al enviar un formulario solicitando contacto).
+      </li>
+      <li><strong>Interés legítimo</strong> para prevenir fraude/spam y mantener la seguridad del sitio (cuando sea
+        necesario y proporcional).</li>
+      <li><strong>Medidas precontractuales</strong> si solicitas una sesión/diagnóstico para evaluar una posible
+        relación profesional.</li>
     </ul>
 
     <h2>5. Destinatarios (proveedores)</h2>
-    <p>No vendemos tus datos. Podemos compartirlos con proveedores necesarios para operar el servicio, actuando como encargados del tratamiento:</p>
+    <p>No vendemos tus datos. Podemos compartirlos con proveedores necesarios para operar el servicio, actuando como
+      encargados del tratamiento:</p>
     <ul>
       <li><strong>Automatización/CRM:</strong> Make (webhooks) u otras herramientas que uses.</li>
       <li><strong>Agenda:</strong> Calendly (reservas y recordatorios).</li>
@@ -68,21 +81,29 @@
     </ul>
 
     <h2>6. Transferencias internacionales</h2>
-    <p>Algunos proveedores pueden tratar datos fuera del EEE. En ese caso se aplicarán garantías adecuadas (p. ej. cláusulas contractuales tipo) cuando proceda.</p>
+    <p>Algunos proveedores pueden tratar datos fuera del EEE. En ese caso se aplicarán garantías adecuadas (p. ej.
+      cláusulas contractuales tipo) cuando proceda.</p>
 
     <h2>7. Plazos de conservación</h2>
     <ul>
-      <li><strong>Solicitudes:</strong> el tiempo necesario para atender tu petición y, posteriormente, los plazos legales aplicables.</li>
-      <li><strong>Agenda/reuniones:</strong> mientras sea necesario para la coordinación y seguimiento de la sesión.</li>
-      <li><strong>Datos comerciales (si consientes):</strong> hasta que revoques el consentimiento o solicites la baja.</li>
+      <li><strong>Solicitudes:</strong> el tiempo necesario para atender tu petición y, posteriormente, los plazos
+        legales aplicables.</li>
+      <li><strong>Agenda/reuniones:</strong> mientras sea necesario para la coordinación y seguimiento de la sesión.
+      </li>
+      <li><strong>Datos comerciales (si consientes):</strong> hasta que revoques el consentimiento o solicites la baja.
+      </li>
     </ul>
 
     <h2>8. Derechos</h2>
-    <p>Puedes ejercer los derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad, así como retirar tu consentimiento, escribiendo a <a href="mailto:[EMAIL]">[EMAIL]</a> con el asunto “Protección de datos”.</p>
-    <p>Si consideras que tus derechos no han sido atendidos, puedes presentar una reclamación ante la Agencia Española de Protección de Datos (AEPD).</p>
+    <p>Puedes ejercer los derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad, así como
+      retirar tu consentimiento, escribiendo a <a href="mailto:[EMAIL]">[EMAIL]</a> con el asunto “Protección de datos”.
+    </p>
+    <p>Si consideras que tus derechos no han sido atendidos, puedes presentar una reclamación ante la Agencia Española
+      de Protección de Datos (AEPD).</p>
 
     <h2>9. Medidas de seguridad</h2>
-    <p>Aplicamos medidas técnicas y organizativas razonables para proteger los datos frente a acceso no autorizado, pérdida o alteración.</p>
+    <p>Aplicamos medidas técnicas y organizativas razonables para proteger los datos frente a acceso no autorizado,
+      pérdida o alteración.</p>
 
     <h2>10. Menores</h2>
     <p>Este sitio no se dirige a menores. Si eres menor, no envíes datos sin intervención de tu padre/madre o tutor.</p>
@@ -95,10 +116,12 @@
     <div class="site-footer__inner">
       <div class="site-footer__brand">© Aurum Studio</div>
       <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
+        <div class="subtle legal-links"></div>
         <a href="aviso-legal.html">Aviso legal</a>
         <a href="politica-privacidad.html">Privacidad</a>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
