fix legal pages fonts and footer links

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -9,9 +9,7 @@
   <meta name="description" content="Política de privacidad del sitio web de Aurum Studio." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -115,10 +113,11 @@
   <footer class="site-footer" id="footer">
     <div class="site-footer__inner">
       <div class="site-footer__brand">© Aurum Studio</div>
-      <div class="subtle legal-links"></div>
-      <a href="aviso-legal.html">Aviso legal</a>
-      <a href="politica-privacidad.html">Privacidad</a>
-    </div>
+      <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
+        <div class="subtle legal-links"></div>
+        <a href="aviso-legal.html">Aviso legal</a>
+        <a href="politica-privacidad.html">Privacidad</a>
+      </div>
     </div>
   </footer>
 </body>
