--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -9,9 +9,7 @@
   <meta name="description" content="Aviso legal y condiciones de uso del sitio web de Aurum Studio." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -91,6 +89,7 @@
   <footer class="site-footer" id="footer">
     <div class="site-footer__inner">
       <div class="site-footer__brand">© Aurum Studio</div>
+      <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
         <div class="subtle legal-links"></div>
         <a href="aviso-legal.html">Aviso legal</a>
         <a href="politica-privacidad.html">Privacidad</a>
