fix fonts on legal pages

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
+  
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -30,14 +31,14 @@
 
   <section class="section" style="padding-top: 40px;">
     <h1>Política de privacidad</h1>
-    <p class="subtle">Última actualización: [DD/MM/AAAA]</p>
+    <p class="subtle">Última actualización: [10/07/2025]</p>
 
     <h2>1. Responsable del tratamiento</h2>
     <ul>
-      <li><strong>Responsable:</strong> [AURUM STUDIO / RAZÓN SOCIAL COMPLETA]</li>
+      <li><strong>Responsable:</strong> [AURUM STUDIO / AURUM STUDIO, SL]</li>
       <li><strong>NIF/CIF:</strong> [NIF/CIF]</li>
-      <li><strong>Domicilio:</strong> [DIRECCIÓN COMPLETA, CIUDAD, CP, PROVINCIA, PAÍS]</li>
-      <li><strong>Email:</strong> <a href="mailto:[EMAIL]">[EMAIL]</a></li>
+      <li><strong>Domicilio:</strong> [Calle Palancia 37, Sagunto, 46520, Valencia, España]</li>
+      <li><strong>Email:</strong> <a href="mailto:[EMAIL]">[enrique@aurumstudio.es]</a></li>
     </ul>
 
     <h2>2. Datos personales que tratamos</h2>
