--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="nav-actions">
         <a href="#faq" class="btn ghost small">FAQ</a>
-        <a href="agenda.html" target="_blank" rel="noopener" class="btn primary" data-track="cta_agenda">Agenda
+        <a href="agenda/" target="_blank" rel="noopener" class="btn primary" data-track="cta_agenda">Agenda
           sesión</a>
       </div>
     </nav>
@@ -554,8 +554,8 @@
   </div>
   <footer class="site-footer" id="footer">
     <div class="subtle legal-links">
-      <a href="aviso-legal.html">Aviso legal</a>
-      <a href="politica-privacidad.html">Privacidad</a>
+      <a href="aviso-legal/">Aviso legal</a>
+      <a href="politica-privacidad/">Privacidad</a>
     </div>
   </footer>
   <script src="app.js"></script>
