--- a/agenda.html
+++ b/agenda.html
@@ -1,126 +1,5 @@
-<!doctype html>
-<html lang="es">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Aurum Studio | Reserva tu sesion</title>
-    <meta name="description" content="Reserva tu sesion privada con Aurum Studio." />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
-        rel="stylesheet" />
-
-    <link rel="stylesheet" href="styles.css" />
-    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet" />
-</head>
-
-<body>
-    <div class="agenda-page">
-
-        <nav class="nav">
-            <strong class="logo">AURUM STUDIO</strong>
-            <div class="nav-actions">
-                <a class="btn ghost small" href="index.html" data-track="cta_back">Volver</a>
-                <a class="btn primary small" href="mailto:enrique@aurumstudio.es" data-track="cta_email">Contacto</a>
-            </div>
-        </nav>
-
-        <header class="agenda-head">
-            <h1>Reserva tu sesion aqui</h1>
-            <p>
-                Selecciona fecha y hora. Solo veras disponibilidad real
-                (Calendly bloquea automaticamente horas ya ocupadas en tu Google Calendar).
-            </p>
-        </header>
-
-        <section class="schedule-card">
-            <div class="schedule-topnote">
-                <span style="color:var(--gold)">●</span>
-                <span>Si no encuentras hueco, escribe a <strong>enrique@aurumstudio.es</strong> y te abrimos uno.</span>
-            </div>
-
-            <div class="calendly-shell">
-                <div class="booking-grid">
-                    <div class="booking-cal">
-                        <div class="calendly-inline-widget"
-                            data-url="https://calendly.com/aurumstudioghl/30min?hide_gdpr_banner=1"
-                            style="min-width:320px;height:760px;">
-                        </div>
-                    </div>
-
-                    <aside class="booking-info">
-                        <div class="info-card">
-                            <div class="info-kicker">Antes de reservar</div>
-                            <h3 class="info-title">Para sacar el maximo provecho del tiempo necesitamos que:</h3>
-
-                            <ul class="info-list">
-                                <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
-                                    estres.</li>
-                                <li>Estes en un ambiente tranquilo y silencioso, con buena conexion de internet.</li>
-                                <li>
-                                    Puedes encender la camara para que la conversacion sea mas personal (si no,
-                                    probablemente reagendaremos la reunion).
-                                </li>
-                            </ul>
-
-                            <div class="info-divider"></div>
-
-                            <p class="info-strong">Esto NO es una llamada de coaching.</p>
-                            <p class="info-muted">
-                                En esta llamada veremos si podemos ayudarte y, en caso de encajar, el siguiente paso
-                                para trabajar juntos.
-                            </p>
-                        </div>
-                    </aside>
-                </div>
-            </div>
-        </section>
-
-    </div>
-
-    <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <script>
-        (function () {
-            const send = (event, payload = {}) => {
-                console.log("[TRACK]", event, payload);
-                if (window.gtag) window.gtag("event", event, payload);
-                if (window.fbq) window.fbq("trackCustom", event, payload);
-            };
-
-            document.addEventListener("click", (e) => {
-                const el = e.target.closest("[data-track]");
-                if (!el) return;
-                const event = el.getAttribute("data-track");
-                const text = (el.textContent || "").trim().slice(0, 80);
-                const href = el.getAttribute("href") || "";
-                send(event, { text, href, page: location.pathname });
-            });
-
-            // Calendly posts messages to the parent window
-            window.addEventListener("message", function (e) {
-                const msg = e.data;
-                if (!msg || typeof msg !== "string") return;
-                if (msg.toLowerCase().includes("calendly")) {
-                    send("calendly_message", { msg: msg.slice(0, 200), page: location.pathname });
-                }
-            });
-        })();
-    </script>
-    <footer class="site-footer" id="footer">
-        <div class="site-footer__inner">
-            <div class="site-footer__brand">© Aurum Studio</div>
-
-            <div class="subtle legal-links">
-                <a href="aviso-legal.html">Aviso legal</a>
-                <a href="politica-privacidad.html">Privacidad</a>
-            </div>
-        </div>
-    </footer>
-
-</body>
-
-</html>
+<!doctype html><html lang="es"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<meta http-equiv="refresh" content="0; url=/agenda/">
+<script>location.replace("/agenda/")</script>
+</head><body></body></html>
