Fix footer layout and legal links

--- a/agenda.html
+++ b/agenda.html
@@ -80,20 +80,6 @@
             </div>
         </section>
 
-        <footer class="site-footer" id="footer">
-            <div class="site-footer__inner">
-                <div class="site-footer__brand">© Aurum Studio</div>
-                <div class="social social--bottom">
-                    <a class="social__link" href="https://www.instagram.com/aurumstudio.ai" target="_blank"
-                        rel="noopener" aria-label="Instagram Aurum Studio">
-                        <svg viewBox="0 0 24 24" aria-hidden="true">
-                            <path
-                                d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9A3.5 3.5 0 0 0 20 16.5v-9A3.5 3.5 0 0 0 16.5 4h-9Zm10.75 1.75a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" />
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </footer>
 
     </div>
 
@@ -125,17 +111,14 @@
             });
         })();
     </script>
-    <footer class="site-footer" id="footer">
-        <div class="footer-inner">
-            <span class="footer-copy">© Aurum Studio</span>
-
-            <nav class="legal-links" aria-label="Legal">
-                <a href="/aviso-legal.html">Aviso legal</a>
-                <span class="sep">·</span>
-                <a href="/politica-privacidad.html">Privacidad</a>
-            </nav>
+    <footer class="site-footer">
+        <div class="footer-brand">© Aurum Studio</div>
+        <div class="legal-links">
+            <a href="aviso-legal.html">Aviso legal</a>
+            <a href="politica-privacidad.html">Privacidad</a>
         </div>
     </footer>
+
 
 </body>
 
