--- a/index.html
+++ b/index.html
@@ -552,8 +552,6 @@
       </div>
     </div>
   </div>
-  <footer class="site-footer" id="footer">
-  </footer>
   <script src="/app.js"></script>
   <script>
     (function () {
@@ -592,17 +590,14 @@
       });
     })();
   </script>
-  <footer class="site-footer" id="footer">
-    <div class="footer-inner">
-      <span class="footer-copy">© Aurum Studio</span>
-
-      <nav class="legal-links" aria-label="Legal">
-        <a href="/aviso-legal.html">Aviso legal</a>
-        <span class="sep">·</span>
-        <a href="/politica-privacidad.html">Privacidad</a>
-      </nav>
+  <footer class="site-footer">
+    <div class="footer-brand">© Aurum Studio</div>
+    <div class="legal-links">
+      <a href="aviso-legal.html">Aviso legal</a>
+      <a href="politica-privacidad.html">Privacidad</a>
     </div>
   </footer>
+
 
 </body>
 
