--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -107,26 +107,14 @@
     <p>Podremos actualizar esta política. Publicaremos la fecha de última actualización en la cabecera.</p>
   </section>
 
-  <footer class="site-footer" id="footer">
-    <div class="site-footer__inner">
-      <div class="site-footer__brand">© Aurum Studio</div>
-      <div class="subtle" style="display:flex; gap:14px; flex-wrap:wrap;">
-        <a href="/aviso-legal.html">Aviso legal</a>
-        <a href="/politica-privacidad.html">Privacidad</a>
-      </div>
+  <footer class="site-footer">
+    <div class="footer-brand">© Aurum Studio</div>
+    <div class="legal-links">
+      <a href="aviso-legal.html">Aviso legal</a>
+      <a href="politica-privacidad.html">Privacidad</a>
     </div>
   </footer>
-  <footer class="site-footer" id="footer">
-    <div class="footer-inner">
-      <span class="footer-copy">© Aurum Studio</span>
 
-      <nav class="legal-links" aria-label="Legal">
-        <a href="/aviso-legal.html">Aviso legal</a>
-        <span class="sep">·</span>
-        <a href="/politica-privacidad.html">Privacidad</a>
-      </nav>
-    </div>
-  </footer>
 
 </body>
 
