Style Calendly with brand colors

--- a/agenda.html
+++ b/agenda.html
@@ -47,37 +47,39 @@
                 <div class="booking-grid">
                     <div class="booking-cal">
                         <div class="calendly-inline-widget"
-                            data-url="https://calendly.com/aurumstudioghl/30min?hide_gdpr_banner=1"
-                            style="min-width:320px;height:760px;">
-                        </div>
+                            data-url="https://calendly.com/aurumstudioghl/30min?hide_gdpr_banner=1&background_color=07070a&text_color=f6f3ee&primary_color=d6b56d"
+                            style="min-width:320px;height:780px;"></div>
+                        <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
+
+
+                        <aside class="booking-info">
+                            <div class="info-card">
+                                <div class="info-kicker">Antes de reservar</div>
+                                <h3 class="info-title">Para sacar el maximo provecho del tiempo necesitamos que:</h3>
+
+                                <ul class="info-list">
+                                    <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
+                                        estres.</li>
+                                    <li>Estes en un ambiente tranquilo y silencioso, con buena conexion de internet.
+                                    </li>
+                                    <li>
+                                        Puedes encender la camara para que la conversacion sea mas personal (si no,
+                                        probablemente reagendaremos la reunion).
+                                    </li>
+                                </ul>
+
+                                <div class="info-divider"></div>
+
+                                <p class="info-strong">Esto NO es una llamada de coaching.</p>
+                                <p class="info-muted">
+                                    En esta llamada veremos si podemos ayudarte y, en caso de encajar, el siguiente paso
+                                    para trabajar juntos.
+                                </p>
+                            </div>
+                        </aside>
                     </div>
-
-                    <aside class="booking-info">
-                        <div class="info-card">
-                            <div class="info-kicker">Antes de reservar</div>
-                            <h3 class="info-title">Para sacar el maximo provecho del tiempo necesitamos que:</h3>
-
-                            <ul class="info-list">
-                                <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
-                                    estres.</li>
-                                <li>Estes en un ambiente tranquilo y silencioso, con buena conexion de internet.</li>
-                                <li>
-                                    Puedes encender la camara para que la conversacion sea mas personal (si no,
-                                    probablemente reagendaremos la reunion).
-                                </li>
-                            </ul>
-
-                            <div class="info-divider"></div>
-
-                            <p class="info-strong">Esto NO es una llamada de coaching.</p>
-                            <p class="info-muted">
-                                En esta llamada veremos si podemos ayudarte y, en caso de encajar, el siguiente paso
-                                para trabajar juntos.
-                            </p>
-                        </div>
-                    </aside>
                 </div>
-            </div>
         </section>
 
 
