Style Calendly with brand colors

--- a/agenda.html
+++ b/agenda.html
@@ -30,10 +30,10 @@
         </nav>
 
         <header class="agenda-head">
-            <h1>Reserva tu sesion aqui</h1>
+            <h1>Reserva tu sesión aquí</h1>
             <p>
                 Selecciona fecha y hora. Solo veras disponibilidad real
-                (Calendly bloquea automaticamente horas ya ocupadas en tu Google Calendar).
+                (Calendly bloquea automáticamente horas ya ocupadas en tu Google Calendar).
             </p>
         </header>
 
@@ -56,16 +56,16 @@
                         <aside class="booking-info">
                             <div class="info-card">
                                 <div class="info-kicker">Antes de reservar</div>
-                                <h3 class="info-title">Para sacar el maximo provecho del tiempo necesitamos que:</h3>
+                                <h3 class="info-title">Para sacar el máximo provecho del tiempo necesitamos que:</h3>
 
                                 <ul class="info-list">
                                     <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
-                                        estres.</li>
-                                    <li>Estes en un ambiente tranquilo y silencioso, con buena conexion de internet.
+                                        estrés.</li>
+                                    <li>Estés en un ambiente tranquilo y silencioso, con buena conexión a internet.
                                     </li>
                                     <li>
                                         Puedes encender la camara para que la conversacion sea mas personal (si no,
-                                        probablemente reagendaremos la reunion).
+                                        probablemente reagendaremos la reunión).
                                     </li>
                                 </ul>
 
