Fix accents and Calendly URL params

--- a/agenda.html
+++ b/agenda.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
 
     <title>Aurum Studio | Reserva tu sesion</title>
     <meta name="description" content="Reserva tu sesion privada con Aurum Studio." />
