Fix typo in agenda

--- a/agenda.html
+++ b/agenda.html
@@ -33,7 +33,7 @@
         <header class="agenda-head">
             <h1>Reserva tu sesión aquí</h1>
             <p>
-                Selecciona fecha y hora. Solo veras disponibilidad real
+                Selecciona fecha y hora. Solo verás disponibilidad real
                 (Calendly bloquea automáticamente horas ya ocupadas en tu Google Calendar).
             </p>
         </header>
