Add Made by AurumLabs in footer

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -109,6 +109,8 @@
 
   <footer class="site-footer">
     <div class="footer-brand">© Aurum Studio</div>
+    <span class="made-by">Made by AurumLabs</span>
+
     <div class="legal-links">
       <a href="aviso-legal.html">Aviso legal</a>
       <a href="politica-privacidad.html">Privacidad</a>
