--- a/agenda.html
+++ b/agenda.html
@@ -113,6 +113,8 @@
     </script>
     <footer class="site-footer">
         <div class="footer-brand">© Aurum Studio</div>
+        <span class="made-by">Made by AurumLabs</span>
+
         <div class="legal-links">
             <a href="aviso-legal.html">Aviso legal</a>
             <a href="politica-privacidad.html">Privacidad</a>
