SEO: update head tags

--- a/agenda.html
+++ b/agenda.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
 
+    
+    <title>Agenda tu sesión privada | Aurum Studio</title>
+    <meta name="description" content="Reserva tu sesión privada con Aurum Studio. Revisión de tu captación actual + plan para generar más citas y ventas premium.">
+    <meta name="robots" content="index,follow">
+
+
     <title>Aurum Studio | Reserva tu sesion</title>
     <meta name="description" content="Reserva tu sesion privada con Aurum Studio." />
 
