--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Aurum Studio — Marketing & Ads para joyerías de lujo</title>
+  <meta name="description"
+    content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda. Reserva una sesión privada con Aurum Studio.">
+  <meta name="robots" content="index,follow">
+
   <title>Aurum Studio | Compradores de alto valor para joyerías de lujo</title>
   <meta name="description"
     content="Sistema de anuncios + landing + cualificación + agenda para atraer compradores reales de alta joyería. Menos curiosos. Más clientes con intención." />
