--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -5,6 +5,11 @@
   <link rel="canonical" href="https://www.aurumstudio.es/aviso-legal.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Aviso legal | Aurum Studio</title>
+  <meta name="description" content="Información legal, condiciones de uso y datos del titular del sitio web de Aurum Studio.">
+  <meta name="robots" content="noindex,follow">
+
   <title>Aviso legal | Aurum Studio</title>
   <meta name="robots" content="index,follow" />
   <meta name="description" content="Aviso legal y condiciones de uso del sitio web de Aurum Studio." />
