--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -5,6 +5,13 @@
   <link rel="canonical" href="https://www.aurumstudio.es/politica-privacidad.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  
+  <title>Política de privacidad | Aurum Studio</title>
+  <meta name="description" content="Política de privacidad y protección de datos (RGPD) del sitio web de Aurum Studio.">
+  <meta name="robots" content="noindex,follow">
+
+
   <title>Política de privacidad | Aurum Studio</title>
   <meta name="robots" content="index,follow" />
   <meta name="description" content="Política de privacidad del sitio web de Aurum Studio." />
